--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,8 @@ version: '3'
 services:
     mysql:
         image: 'mysql:5.7'
-        ports:
-            - '3306:3306'
         volumes:
-            - './docker/database:/var/lib/mysql'
+            - './sql/init.sql:/docker-entrypoint-initdb.d/init.sql'
         environment:
             - MYSQL_DATABASE=docker
             - MYSQL_USER=docker
@@ -15,12 +13,14 @@ services:
         image: 'adminer:latest'
         ports:
             - '8081:8080'
+        depends_on:
+            - mysql
     php:
         image: 'okty/php:7.2'
         volumes:
             - './:/usr/share/nginx/html'
         environment:
-            - 'PHP_EXTENSIONS=pdo_mysql,intl,opcache,apcu,xdebug'
+            - 'PHP_EXTENSIONS=pdo_mysql,intl,opcache'
     nginx:
         image: 'okty/nginx:1.14'
         ports:
@@ -31,3 +31,6 @@ services:
             - MAX_UPLOAD_SIZE=2M
             - PHP_CONTAINER_ID=php
             - INDEX_SUBFOLDER=public
+        depends_on:
+            - php
+            - mysql
