--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ services:
     mysql:
         image: 'mariadb:latest'
         volumes:
-            - './sql/init.sql:/docker-entrypoint-initdb.d/init.sql'
+          - './sql/init.sql:/docker-entrypoint-initdb.d/init.sql'
         environment:
-            - MYSQL_DATABASE=docker
-            - MYSQL_USER=docker
-            - MYSQL_PASSWORD=docker
-            - MYSQL_RANDOM_ROOT_PASSWORD=yes
+          - MYSQL_DATABASE=docker
+          - MYSQL_USER=docker
+          - MYSQL_PASSWORD=docker
+          - MYSQL_ROOT_PASSWORD=docker
+        ports:
+          - "3306:3306"
     adminer:
         image: 'adminer:latest'
         ports:
@@ -21,6 +23,8 @@ services:
             - './:/usr/share/nginx/html'
         environment:
             - 'PHP_EXTENSIONS=pdo_mysql,intl,opcache'
+        depends_on:
+            - mysql
     nginx:
         build:
           context: ./
